# database-service

./: README.md  database-service.cabal  docker-compose.yml  stack.yaml
src/: Lib.hs  MyLib.hs
test/: Main.hs
